--- a/luke homepage/css/style.css
+++ b/luke homepage/css/style.css
@@ -1,5 +1,6 @@
 html {
   background-color: black;
+  color: white;
   }
 
 section {
@@ -21,6 +22,7 @@ span {
 .story {
   font-family: Times;
   font-size: 1.25em;
+  color: white;
   width: 400px;
   margin: 0 auto;
   border: solid;
@@ -117,27 +119,32 @@ padding-left: 15px;
 
 .navBlock {
   height: 300px;
+  padding-left: 300px;
+  color: white;
 }
 
+.navBlock li {
+  list-style-type: none;
+}
 
 
 .cmyk {
     transition-duration: 0.5s;
     position: absolute;
-    color: #232323;
+    color: #FFFFFF;
 }
 
-.cmyk span {
-  color: 000;
-  font-family: 'Fredoka One', Times;
 
+
+.cmyk span {
+  font-family: 'Fredoka One', Times;
 }
 
 .cmyk:hover {
   transition: all 0.7s ease;
   text-shadow: .75rem -0.75rem rgba(255, 0, 255, 0.75), -0.75rem -0.25rem rgba(0, 255, 255, 0.75), 0.725rem 1.25rem rgba(255, 255, 0, 0.75);
   
-  color: rgba(255,255,255,0.5);
+  color: rgba(255,255,255,0);
 
 }
 
