Added ‘night mode’ text

--- a/luke homepage/css/style.css
+++ b/luke homepage/css/style.css
@@ -1,3 +1,147 @@
+#nightMode {
+    position:absolute;
+    line-height: 36px;
+    text-align: center;
+    left: 595px;
+    top: 82px;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+}
+
+#switch{
+    top: 10%;
+    left: 50%;
+    width: 180px;
+    height: 40px;
+}
+
+.toggle{
+    position: absolute;
+    border: 2px solid #444249;
+    border-radius: 20px;
+    -webkit-transition: border-color .6s  ease-out;
+    transition: border-color .6s  ease-out;
+    box-sizing: border-box;
+}
+
+.toggle.toggle-on{
+    border-color: rgba(137, 194, 217, .4);
+    -webkit-transition: all .5s .15s ease-out;
+    transition: all .5s .15s ease-out;
+}
+
+.toggle-button{
+    position: absolute;
+    top: 4px;
+    width: 28px;
+    bottom: 4px;
+    left: 5px;
+    background-color: #444249;
+    border-radius: 19px; 
+    cursor: pointer;
+    -webkit-transition: all .3s .1s, width .1s, top .1s, bottom .1s;
+    transition: all .3s .1s, width .1s, top .1s, bottom .1s;
+}
+
+.toggle-on .toggle-button{
+    top: 3px;
+    width: 168PX;
+    bottom: 3px;
+    right: 3px;
+    border-radius: 23px;
+    background-color: #89c2da;
+    box-shadow: 0 0 16px #4b7a8d;
+    -webkit-transition: all .2s .1s, right .1s;
+    transition: all .2s .1s, right .1s;
+}
+
+
+.toggle-text-on{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    line-height: 36px;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    cursor: pointer;
+    -webkit-user-select: none; /* Chrome/Safari */    
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+
+
+    color: rgba(0,0,0,0);
+}
+
+.toggle-on .toggle-text-on{
+    color: #3b6a7d;
+    -webkit-transition: color .3s .15s ;
+    transition: color .3s .15s ;
+}
+
+.toggle-text-off{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 8px;
+    line-height: 36px;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    -webkit-user-select: none; /* Chrome/Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+ */
+
+    cursor: pointer;
+
+    color: #444249;
+}
+
+.toggle-on .toggle-text-off{
+    color: rgba(0,0,0,0);
+}
+
+/* used for streak effect */
+.glow-comp{
+    position: absolute;
+    opacity: 0;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    border-radius: 6px;
+    background-color: rgba(75, 122, 141, .1);
+    box-shadow: 0 0 12px rgba(75, 122, 141, .2);
+    -webkit-transition: opacity 4.5s 1s;
+    transition: opacity 4.5s 1s;
+}
+
+.toggle-on .glow-comp{
+    opacity: 1;
+    -webkit-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .cmyk span {
   font-family: 'Fredoka One', Times;
@@ -6,7 +150,7 @@
 
 .cmyk:hover {
   transition: all 0.7s ease;
-  text-shadow: .75rem -0.75rem rgba(255, 0, 255, 0.75), -0.75rem -0.25rem rgba(0, 255, 255, 0.75), 0.725rem 1.25rem rgba(255, 255, 0, 0.75);
+  text-shadow: .75rem -0.75rem rgba(255, 0, 255, 1.75), -0.75rem -0.25rem rgba(0, 255, 255, 0.75), 0.725rem 1.25rem rgba(255, 255, 0, 0.75);
   
   color: rgba(255,255,255,0);
 
@@ -14,9 +158,49 @@
 
 
 
+
+
+.cmyk2 {
+
+  font-family: 'Fredoka One', Times;
+    transition-duration: 0.5s;
+    position: absolute;
+
+
+}
+
+.cmyk2 span {
+  color: black;
+  color: 000;
+  font-family: 'Fredoka One', Times;
+
+
+
+}
+
+.cmyk2:hover {
+
+  text-shadow: .75rem -0.75rem rgba(255, 0, 255, 0.75), -0.75rem -0.25rem rgba(0, 255, 255, 0.75), 0.725rem 1.25rem rgba(255, 255, 0, 0.75);
+
+  transition: text-shadow 0.7s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 html {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   }
 
 section {
@@ -146,7 +330,6 @@ padding-left: 15px;
 
 .cmyk {
     transition-duration: 0.5s;
-    position: absolute;
     color: #FFFFFF;
 }
 
